# CrowNime

./: .gitignore  pyproject.toml
animes/: admin.py  choices.py  models.py  urls.py  views.py
animes/migrations/: 0001_initial.py  0002_alter_anime_title.py  0003_auto_20210804_0010.py  0004_auto_20210804_1734.py  0005_auto_20210804_1751.py  0006_anime_format.py  0007_auto_20210808_2050.py  0008_anime_image.py
animes/templates/animes/: index.html
core/: .env.Example  settings.py  urls.py
templates/: base.html
templates/parcials/: _nav.html
