[tool.poetry]
name = "crownime"
version = "0.1.0"
description = ""
authors = ["helter daniel <helterdaniel@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
django-extensions = "^3.1.3"
Werkzeug = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
